Serve pointer resolution and listings from authoritative cache indexes (#498)
- Add complete, account-scoped pointer indexes for authoritative name resolution and listing.
- Route repository listings, RPCs, and system scanners through the pointer cache.
- Remove the topology cache and redundant request-scoped resolution memo.
- Maintain indexes through fenced writes and recover degraded indexes automatically.
- Expose readiness, recovery, admission, and write-through outcomes through cache telemetry.
- Keep pagination and consistency policy hidden behind repository interfaces.
A complete warm index makes both hits and misses authoritative, with no KV fallback.